tests/errors/InputError/ie-scope-02.ledger
{
{
2016-12-14  missing enclosing scope with nested scope
	Expenses	2
	Assets
}

